src/Deployment/k8s/people-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-internal-service
spec:
  selector:
    app: peoplemanagementapi
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
